--- a/HamiltonTevin_ECommerce/app/src/main/res/values/strings.xml
+++ b/HamiltonTevin_ECommerce/app/src/main/res/values/strings.xml
@@ -14,4 +14,5 @@
     <string name="hello_guest">Hello Guest</string>
     <string name="create_account">CREATE ACCOUNT</string>
     <string name="member_offer">For exclusive benfits and exciting offers for our trusted members only</string>
+    <string name="add_to_cart">Add To Cart</string>
 </resources>
