--- a/HamiltonTevin_ECommerce/app/src/main/res/values/strings.xml
+++ b/HamiltonTevin_ECommerce/app/src/main/res/values/strings.xml
@@ -16,4 +16,10 @@
     <string name="member_offer">For exclusive benfits and exciting offers for our trusted members only</string>
     <string name="add_to_cart">Add To Cart</string>
     <string name="description">Description</string>
+    <string name="email_address">Email Address:</string>
+    <string name="n_a">N/A</string>
+    <string name="phone_number">Phone Number:</string>
+    <string name="full_name">Full Name</string>
+    <string name="save">Save</string>
+    <string name="edit">Edit</string>
 </resources>
